--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
               We are committed to ensuring that we consistently deliver high-quality solutions that meet and exceed the expectations of our clients. Our dedication to excellence drives everything we do, and we take great pride in our ability to provide impeccable services that help businesses thrive in the digital landscape.
             </p>
             <div class="light-rounded-buttons">
-              <a href="javascript:void(0)" class="btn primary-btn-outline">Get Started</a>
+              <a href="documents/company profile.pdf" download="netvortex-company-profile.pdf" class="btn primary-btn-outline">Download Our Company Profile</a>
             </div>
           </div>
         </div>
@@ -688,9 +688,56 @@
             </div>
           </div>
         </div>
-      </div>
-      
-              
+	      <div class="col-xl-8">
+          <div class="contact-form-wrapper">
+            <div class="row">
+              <div class="col-xl-10 col-lg-8 mx-auto">
+                <div class="section-title text-center">
+                  <span> Get in Touch </span>
+                  <h2>
+                    Ready to Get Started
+                  </h2>
+                  <p>
+                    Feel free to contact us at any moment and our team will gladly respond within 24hrs!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <form action="https://formspree.io/f/xanyzrjg" method="POST" class="contact-form">
+              <div class="row">
+                <div class="col-md-6">
+                  <input type="text" name="name" id="name" placeholder="Name" required />
+                </div>
+                <div class="col-md-6">
+                  <input type="email" name="email" id="email" placeholder="Email" required />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <input type="text" name="phone" id="phone" placeholder="Phone" required />
+                </div>
+                <div class="col-md-6">
+                  <input type="text" name="subject" id="email" placeholder="Subject" required />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <textarea name="message" id="message" placeholder="Type Message" rows="5"></textarea>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="button text-center rounded-buttons">
+                    <button type="submit" class="btn primary-btn rounded-full">
+                      Send Message
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>     
     </div>
   </section>
   <!-- ========================= contact-section end ========================= -->
