--- a/index.html
+++ b/index.html
@@ -634,6 +634,11 @@
                 <img src="assets/images/client-logo/wm_logo.png" alt="Brand Logo Images" />
               </a>
             </div>
+            <div class="single-image">
+              <a class="navbar-brand" href="https://www.nyux.co.tz">
+                <img src="assets/images/client-logo/nyux-logo.png" alt="Brand Logo Images" />
+              </a>
+            </div>
 
           </div>
         </div>
